--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
     </head>
-    <body>
-       ENTER SECRET KEY: <input id="inputas" type="text">
+    <body style="background: darkred; font-color: white; text-align: center;">
+       Įvesk patį slapčiausią kodą: <input id="inputas" type="text">
        <button onclick="senisSaltis()">Spausk</button>
        <h1 id="neteisingasataskymas"></h1>
     </body>
@@ -13,7 +13,7 @@
         console.log(a);
           
         if (a === "123") {
-         document.getElementById('neteisingasataskymas').innerHTML = "Nueik i stovinčių titanų buveinę, sušuk 'OHO' ir lauk atsako!";
+         document.getElementById('neteisingasataskymas').innerHTML = "Nueik i stovinčių titanų būveinę, sušuk 'OHO' ir lauk atsako!";
         } else {
           document.getElementById('neteisingasataskymas').innerHTML = "Ech, pabandyk dar kartą!";
         }
