--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
     </head>
-    <body style="background: darkred; font-color: white; text-align: center;">
-       Įvesk patį slapčiausią kodą: <input id="inputas" type="text">
+    <body style="background: darkred; color: white; text-align: center;">
+       <h2>Įvesk patį slapčiausią kodą: <h2><input id="inputas" type="text">
        <button onclick="senisSaltis()">Spausk</button>
        <h1 id="neteisingasataskymas"></h1>
     </body>
